# Cpp20RayTracer

./: .gitignore  CMakeLists.txt  Prompt.md  Readme.md  bmp_writer.cpp  bmp_writer.h  cuda_utils.h  g.cu  light.h  main.cpp  material.h  r  ray.h  raytracer.cpp  renderer.cu  sphere.h  vec3.h
